@@ -3,6 +3,8 @@
     * agent/seahorse-agent-status.c:
     * plugins/applet/seahorse-applet.c: Make windows 
     that appear have the proper image in the window selector.
+    * plugins/applet/seahorse-applet.c: Make proper icon display 
+    in About dialog. 
 
 2006-03-06  Nate Nielsen  <nielsen@memberwebs.com>
 
